airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T130646.724541+0000/task_id=run_pipeline_4/attempt=1.log
[2026-06-03T13:06:48.947+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:06:48.983+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_4 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.995+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_4 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.996+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T13:06:49.012+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_4> on 2026-06-03 13:06:46.724541+00:00
[2026-06-03T13:06:49.020+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2367) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:06:49.019+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_4', 'manual__2026-06-03T13:06:46.724541+00:00', '--job-id', '146', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmp8zwdbbcs']
[2026-06-03T13:06:49.022+0000] {standard_task_runner.py:63} INFO - Started process 2369 to run task
[2026-06-03T13:06:49.022+0000] {standard_task_runner.py:91} INFO - Job 146: Subtask run_pipeline_4
[2026-06-03T13:06:49.082+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_4 manual__2026-06-03T13:06:46.724541+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:06:49.186+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_4' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T13:06:46.724541+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T13:06:46.724541+00:00'
[2026-06-03T13:06:49.189+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:06:49.212+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:06:49.218+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 4']
[2026-06-03T13:06:49.230+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:06:57.237+0000] {subprocess.py:93} INFO - Using CPU. Note: This module is much faster with a GPU.
[2026-06-03T13:07:23.686+0000] {subprocess.py:93} INFO - /home/***/.local/lib/python3.12/site-packages/torch/utils/data/dataloader.py:752: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.
[2026-06-03T13:07:23.687+0000] {subprocess.py:93} INFO -   super().__init__(loader)
[2026-06-03T13:08:02.828+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:02.830+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:08:02.832+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:08:02.834+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:08:02.836+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:08:02.837+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:08:02.839+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:08:02.840+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:08:02.841+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:08:02.843+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:08:02.844+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:02.846+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:08:02.847+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:02.848+0000] {subprocess.py:93} INFO - Running pipeline: local_to_postgres_pipeline (storage_to_db)
[2026-06-03T13:08:02.850+0000] {subprocess.py:93} INFO - Loading table: customer (2 rows)
[2026-06-03T13:08:02.851+0000] {subprocess.py:93} INFO - Loading table: data pic1 (91 rows)
[2026-06-03T13:08:02.852+0000] {subprocess.py:93} INFO - Loading table: employee (20 rows)
[2026-06-03T13:08:02.853+0000] {subprocess.py:93} INFO - Loading table: employee_data (100 rows)
[2026-06-03T13:08:02.854+0000] {subprocess.py:93} INFO - Loading table: sample (2 rows)
[2026-06-03T13:08:02.855+0000] {subprocess.py:93} INFO - Loading table: word (12 rows)
[2026-06-03T13:08:02.856+0000] {subprocess.py:93} INFO - Processed total rows: 227
[2026-06-03T13:08:02.857+0000] {subprocess.py:93} INFO - Completed: 227 rows processed
[2026-06-03T13:08:02.857+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:08:02.858+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 61, in main
[2026-06-03T13:08:02.858+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:08:02.859+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:08:02.859+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:08:02.860+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:08:02.861+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:08:02.861+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:08:02.862+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:02.862+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:02.863+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:08:02.863+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:02.864+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:08:02.864+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 94, in <module>
[2026-06-03T13:08:02.864+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:08:02.865+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 79, in main
[2026-06-03T13:08:02.865+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:08:02.866+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:08:02.866+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:08:02.866+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:08:02.867+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:08:02.867+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:08:02.867+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:08:03.818+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:08:03.820+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:08:03.831+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:08:03.837+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_4, run_id=manual__2026-06-03T13:06:46.724541+00:00, execution_date=20260603T130646, start_date=20260603T130648, end_date=20260603T130803
[2026-06-03T13:08:03.854+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 146 for task run_pipeline_4 (Bash command failed. The command returned a non-zero exit code 1.; 2369)
[2026-06-03T13:08:03.870+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:08:03.888+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:08:03.892+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
